<resources>
    <string name="app_name">AlokozapShopApplication</string>
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="bottom_home">Home</string>
    <string name="bottom_category">Category</string>
    <string name="bottom_deal" translatable="false">DEAL!</string>
    <string name="bottom_my_account">My Account</string>
    <string name="bottom_cart">Cart</string>
    <string name="account_hello_tittle" translatable="false">Hello!</string>
    <string name="welcome_alokozap">Welcome To AlokozapShop</string>
    <string name="account_sign_in">SignIn</string>
    <string name="account_signup">Sign Up</string>
    <string name="my_account_country">Country</string>
    <string name="my_account_language">Language</string>
    <string name="my_account_sub_language">English(Canada)</string>
    <string name="my_account_currency">Currency</string>
    <string name="my_account_sub_currency">CAD</string>
    <string name="my_account_about">About AlokozayShop</string>
    <string name="my_account_contact">Contact Us</string>
    <string name="my_account_help">Help</string>
    <string name="my_account_version">Version : 3.8 Prod 09.01.23</string>
    <string name="sign_in_email_id_edittext">Email ID*</string>
    <string name="sign_in_password_edittext">Password*</string>
    <string name="sign_in_text_or">OR</string>
    <string name="sign_in_button_sign_in">SIGN IN</string>
    <string name="sign_in_text_dont_account_forgot_password">Don\'t have an account?\tSign Up\t\t|\tForgot Password?</string>
    <string name="sign_in_text_dont_account_sign_in_with">Or SignIn with</string>
    <string name="sign_in_number_edittext">Mobile Number*</string>
    <string name="sign_up_first_name_edittext">First Name*</string>
    <string name="sign_up_last_name_edittext">Last Name*</string>
    <string name="sign_up_email_id_edittext">Email ID*</string>
    <string name="sign_up_password_edittext">Password*</string>
    <string name="sign_Up_number_edittext">Mobile Number*</string>
    <string name="sign_up_confirm_password_edittext">Confirm Password*</string>
    <string name="sign_up_referral_code_edittext">Referral Code (Optional)</string>
    <string name="sign_up_receive_email_sms">Yes, I would like to receive emails and SMS regarding the promotions and special offers.</string>
    <string name="sign_up_terms_privacy" translatable="false"><![CDATA[By Signing Up, you agree to Alokozay\'s Terms & Conditions and Privacy Policy]]></string>
    <string name="sign_in_button_sign_up">SIGN UP</string>
    <string name="sign_up_sign_up_with">Or Sign Up With</string>
    <string name="sign_up_already_Account">"Already have an account?\tSign In "</string>
    <string name="forgot_password">FORGOT PASSWORD</string>
    <string name="forgot_password_otp">Please enter your email address or mobile number. You will receive an OTP to reset your password.</string>
    <string name="forgot_password_orr">OR</string>
    <string name="forgot_password_or">OR</string>
    <string name="forgot_password_send">SEND</string>
    <string name="select_country">SELECT COUNTRY</string>
    <string name="select_currency">SELECT CURRENCY</string>
    <string name="select_language">SELECT LANGUAGE</string>
    <string name="select_country_canada">Canada</string>
    <string name="select_country_uae">UAE</string>
    <string name="select_country_cyprus">Cyprus</string>
    <string name="Arabic">select_lanaguage_arabic</string>
    <string name="select_language_arabic" translatable="false">Arabic</string>
    <string name="select_language_canada" translatable="false">Canada</string>
    <string name="select_language_english" translatable="false">English</string>
    <string name="select_currency_aed" translatable="false">AED</string>
    <string name="login_sucessfully" translatable="false">Login Successfully</string>
    <string name="edit_profile" translatable="false">Edit Profile</string>
    <string name="change_password" translatable="false">Change Password</string>
    <string name="account_name" translatable="false">Savai Solanki</string>
    <string name="account_email" translatable="false">savai.solanki@brainvire.com</string>
    <string name="account_my_orders" translatable="false">My Orders</string>
    <string name="account_my_returns" translatable="false">My Returns</string>
    <string name="account_my_wallet" translatable="false">My Wallet</string>
    <string name="account_my_wallet_money" translatable="false">0</string>
    <string name="account_my_returns_total" translatable="false">0</string>
    <string name="account_my_orders_total" translatable="false">85</string>
    <string name="my_account_refer_and_earn" translatable="false">Refer and Earn</string>
    <string name="my_account_my_review_rating" translatable="false"><![CDATA[My Reviews & Rating]]></string>
    <string name="my_account_my_wish_list" translatable="false">My Wishlist</string>
    <string name="my_account_my_address" translatable="false">My Addresses</string>
    <string name="my_account_log_out" translatable="false">LOG OUT</string>
    <string name="delete_an_account" translatable="false">Delete an account</string>
    <string name="new_password" translatable="false">New Password</string>
    <string name="confirm_new_password" translatable="false">Confirm New Password</string>
    <string name="current_password" translatable="false">Current Password</string>
    <string name="change_password_button" translatable="false"> UPDATE PASSWORD</string>
    <string name="change_password_change" translatable="false">CHANGE PASSWORD</string>
    <string name="save_profile" translatable="false">SAVE</string>
    <string name="mews_media" translatable="false"><![CDATA[News & Media]]></string>
    <string name="news_media" translatable="false"><![CDATA[News & Media]]></string>
    <string name="shipping_delivery" translatable="false"><![CDATA[Shipping & Delivery]]></string>
    <string name="refunds_exchange" translatable="false"><![CDATA[Refunds & Exchange Policy]]></string>
    <string name="privacy_statement" translatable="false">Privacy Statement</string>
    <string name="terms_conditions" translatable="false"><![CDATA[Terms & Conditions]]></string>
    <string name="search" translatable="false">Search</string>
    <string name="continue_btn" translatable="false">CONTINUE</string>
    <string name="category_item_sort" translatable="false">SORT</string>
    <string name="category_item_filter" translatable="false">FILTER</string>
    <string name="category_item_list" translatable="false">LIST</string>
    <string name="new_item" translatable="false">New</string>
    <string name="new_item_discount_off" translatable="false">20% OFF</string>
    <string name="new_item_name" translatable="false">WOODEN TEA BOX</string>
    <string name="new_item_price" translatable="false">AED 160.00</string>
    <string name="new_item_price_Off" translatable="false">AED 200.00</string>
    <string name="add_to_cart" translatable="false">ADD TO CART</string>
    <string name="add_to_cart_minus" translatable="false">-</string>
    <string name="add_to_cart_plus" translatable="false">+</string>
    <string name="otp_verification" translatable="false">OTP VERIFICATION</string>
    <string name="otp_text" translatable="false">OTP has been sent to your Mobile number +965 (581) - 307-6902</string>
    <string name="otp_verify" translatable="false">Verify</string>
    <string name="enter_otp" translatable="false">Enter Otp</string>
    <string name="resend_otp" translatable="false">Resend</string>
    <string name="contact_us_full_name" translatable="false">Full Name*</string>
    <string name="submit_btn" translatable="false">SUBMIT</string>
    <string name="get_touch" translatable="false">If you have a question, query or comment, please feel free to get in touch and our friendly team will be delighted to help you.</string>
    <string name="write_message" translatable="false">Write Message*</string>
    <string name="view_all" translatable="false">VIEW ALL</string>
    <string name="login_unsucessfully" translatable="false">Login UncessFully</string>
    <string name="yes" translatable="false">Yes</string>
    <string name="no" translatable="false">No</string>
    <string name="choose_gift" translatable="false"><![CDATA[Choose a gift of The Holy Quran for orders AED 100 & Above]]></string>
    <string name="get_free_shipping" translatable="false">Just Remaining AED 35.71 To Get Free Shipping</string>
    <string name="start_range" translatable="false">AED 0.00</string>
    <string name="end_range" translatable="false">AED 50.00</string>
    <string name="select_gift" translatable="false">Select your FREE GIFT</string>
    <string name="btn_apply_Discount_code" translatable="false">APPLY</string>
    <string name="enter_discount_code" translatable="false">Enter Discount Code</string>
    <string name="empty_shoping_cart" translatable="false">Empty Shoping Cart</string>
    <string name="order_summary" translatable="false">Order Summary</string>
    <string name="order_total" translatable="false">Order Total</string>
    <string name="vat" translatable="false">VAT:</string>
    <string name="total" translatable="false">Total(Ext.VAT)</string>
    <string name="order_shipping_handling" translatable="false"><![CDATA[Shipping & Handling]]></string>
    <string name="order_sub_total" translatable="false">Subtotal</string>
    <string name="order_total_aed" translatable="false">AED 14.29</string>
    <string name="vat_aed" translatable="false">AED 0.68</string>
    <string name="total_aed" translatable="false">AED 13.61</string>
    <string name="order_shipping_handling_aed" translatable="false">AED 0.00</string>
    <string name="order_sub_total_aed" translatable="false">AED 14.29</string>
    <string name="save_aed" translatable="false">You will save AED 19.70 on this order</string>
    <string name="total_proceed" translatable="false">Total</string>
    <string name="btn_proceed_buy" translatable="false">PROCEED TO BUY</string>
    <string name="add_cart_item_name" translatable="false">Rooibos organic herbal tea - 25 teabags in foil wrapped envelopes</string>
    <string name="aed_14_29" translatable="false">AED 14.29</string>
    <string name="aed_28_57" translatable="false">AED 28.57</string>
    <string name="qty_1" translatable="false">QTY:1</string>
    <string name="add_to_cart_delet" translatable="false">Delete</string>
    <string name="add_to_cart_wishlist" translatable="false">Move to Wishlist</string>
    <string name="shipped_free" translatable="false">Your Order Will Be Shipped For Free</string>
    <string name="empy_cart" translatable="false">Empty Cart</string>
    <string name="empty_no_item" translatable="false">You have no items in your cart</string>
    <string name="pick_delivery_slot" translatable="false">Pick a Delivery Slot</string>
    <string name="btn_delivery_time_slot" translatable="false">9:00 AM -9:00 PM</string>
    <string name="delivery_date" translatable="false">21-02-2023</string>
    <string name="delivery_day" translatable="false">Tomorrow</string>
    <string name="delivery_info" translatable="false">Delivery Information</string>
    <string name="delivery_dates" translatable="false">Delivery Date</string>
    <string name="delivery_date_16_12_2000" translatable="false">16-12-2000</string>
    <string name="delivery_time" translatable="false">Delivery Time</string>
    <string name="home" translatable="false">Home</string>
    <string name="txtviewPresentableCount" translatable="false">2</string>
    <string name="review" translatable="false">1 Reviews</string>
    <string name="sort">SORT</string>
    <string name="position">Position</string>
    <string name="lowtohigh">Low to High</string>
    <string name="hightolaw">High to Low</string>
    <string name="bestseller">Bestseller</string>
</resources>