<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">


     <item android:id="@+id/mnHome"
         android:icon="@drawable/ic_home"
         android:title="@string/bottom_home" />

    <item android:id="@+id/mnCategory"
        android:icon="@drawable/ic_category"
        android:title="@string/bottom_category" />


    <item android:id="@+id/mnDeals"
        android:icon="@drawable/ic_discount"
        android:title="@string/bottom_deal" />


    <item android:id="@+id/mnAccount"
        android:icon="@drawable/ic_my_account"
        android:title="@string/bottom_my_account" />

    <item android:id="@+id/mnCart"
        android:icon="@drawable/ic_cart"
        android:title="@string/bottom_cart" />




</menu>