<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/btmBottomSheet"
            android:layout_width="match_parent"
            android:background="@drawable/bottomsheet_dailog_bg"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_height="wrap_content">


            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
             >


                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/tvSort"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:fontFamily="@font/source_sans_pro_bold"
                    android:text="@string/sort"
                    android:textColor="@color/purple_dark_main"
                    android:textSize="@dimen/_12sdp"
                    app:layout_constraintEnd_toStartOf="@id/ivCancel"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <com.google.android.material.imageview.ShapeableImageView
                    android:id="@+id/ivCancel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_delete_cross"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />


                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/tvPosition"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="@dimen/_23sdp"
                    android:fontFamily="@font/source_sans_pro_regular"
                    android:text="@string/position"
                    android:textColor="@color/purple_dark_main"
                    android:textSize="@dimen/_12sdp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tvSort" />


                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/tvLowToHigh"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="@dimen/_23sdp"
                    android:fontFamily="@font/source_sans_pro_regular"
                    android:text="@string/lowtohigh"
                    android:textColor="@color/purple_dark_main"
                    android:textSize="@dimen/_12sdp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tvPosition" />


                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/tvHighToLow"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="@dimen/_23sdp"
                    android:fontFamily="@font/source_sans_pro_regular"
                    android:text="@string/hightolaw"
                    android:textColor="@color/purple_dark_main"
                    android:textSize="@dimen/_12sdp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tvLowToHigh" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/tvBestSeller"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="@dimen/_23sdp"
                    android:fontFamily="@font/source_sans_pro_regular"
                    android:text="@string/bestseller"
                    android:textColor="@color/purple_dark_main"
                    android:textSize="@dimen/_12sdp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tvHighToLow" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </com.google.android.material.card.MaterialCardView>


    </androidx.constraintlayout.widget.ConstraintLayout>


</layout>